Update SDK
