# src/models/mod.rs
@@ -1,7 +1,3 @@
-pub mod application_config;
-pub use self::application_config::ApplicationConfig;
-pub mod application_config_one_of;
-pub use self::application_config_one_of::ApplicationConfigOneOf;
 pub mod application_details;
 pub use self::application_details::ApplicationDetails;
 pub mod application_group;
@@ -16,8 +12,6 @@ pub mod create_application_success;
 pub use self::create_application_success::CreateApplicationSuccess;
 pub mod create_response_code_metrics_request;
 pub use self::create_response_code_metrics_request::CreateResponseCodeMetricsRequest;
-pub mod create_rollout_request;
-pub use self::create_rollout_request::CreateRolloutRequest;
 pub mod create_rollout_success;
 pub use self::create_rollout_success::CreateRolloutSuccess;
 pub mod create_user_request;
@@ -74,6 +68,10 @@ pub mod read_rollout_success;
 pub use self::read_rollout_success::ReadRolloutSuccess;
 pub mod rollout;
 pub use self::rollout::Rollout;
+pub mod rollout_config;
+pub use self::rollout_config::RolloutConfig;
+pub mod rollout_config_one_of;
+pub use self::rollout_config_one_of::RolloutConfigOneOf;
 pub mod rollout_event;
 pub use self::rollout_event::RolloutEvent;
 pub mod rollout_event_type;
