# src/models/rollout_config.rs
@@ -1,0 +1,25 @@
+/*
+ * MultiTool
+ *
+ * MultiTool backend API
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum RolloutConfig {
+    RolloutConfigOneOf(Box<models::RolloutConfigOneOf>),
+}
+
+impl Default for RolloutConfig {
+    fn default() -> Self {
+        Self::RolloutConfigOneOf(Default::default())
+    }
+}
+
