# src/models/rollout_config_one_of.rs
@@ -1,0 +1,27 @@
+/*
+ * MultiTool
+ *
+ * MultiTool backend API
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct RolloutConfigOneOf {
+    #[serde(rename = "web_service")]
+    pub web_service: Box<models::WebServiceConfig>,
+}
+
+impl RolloutConfigOneOf {
+    pub fn new(web_service: models::WebServiceConfig) -> RolloutConfigOneOf {
+        RolloutConfigOneOf {
+            web_service: Box::new(web_service),
+        }
+    }
+}
+
